RESOLVED FIXED45601
Resize corner jiggles when resizing slowly in WebKit2
https://bugs.webkit.org/show_bug.cgi?id=45601
Summary Resize corner jiggles when resizing slowly in WebKit2
Sam Weinig
Reported 2010-09-11 15:19:13 PDT
When resizing a WebKit2 window slowly, the resize corner jiggles.
Attachments
Patch (3.68 KB, patch)
2010-09-11 15:22 PDT, Sam Weinig
andersca: review+
Sam Weinig
Comment 1 2010-09-11 15:19:30 PDT
Sam Weinig
Comment 2 2010-09-11 15:22:26 PDT
Sam Weinig
Comment 3 2010-09-11 15:39:17 PDT
Comment on attachment 67315 [details] Patch I am going to solve this in a better way.
Sam Weinig
Comment 4 2010-09-17 16:38:32 PDT
Comment on attachment 67315 [details] Patch On second though, I think this is the right way to go for now.
Sam Weinig
Comment 5 2010-09-17 17:23:40 PDT
Note You need to log in before you can comment on or make changes to this bug.